--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ماشین حساب شیائومی</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
     <div class="contaner">
@@ -43,6 +43,6 @@
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="/src/js/script.js"></script>
 </body>
 </html>
